docs: update implementation docs for loom compatibility